--- a/src/content/docs/guides/backup-and-restore.mdx
+++ b/src/content/docs/guides/backup-and-restore.mdx
@@ -1,4 +1,6 @@
 import { Callout } from "nextra/components";
+import { Cards } from "nextra/components";
+import { ClockIcon, FolderIcon, ServerIcon } from "@heroicons/react/24/outline";
 
 # Backup and restore
 
@@ -37,3 +39,21 @@ cd Runtipi && sudo ./runtipi-cli start
 </Callout>
 
 You're ready to go! Make sure any shared folder or manual network config you may have performed on your first server is re-applied again on your new server.
+
+<Cards>
+  <Cards.Card
+    icon={<ClockIcon />}
+    title="Auto Backup Apps"
+    href="/docs/guides/auto-backup-apps"
+  />
+  <Cards.Card
+    icon={<ServerIcon />}
+    title="Folder Structure"
+    href="/docs/reference/folder-structure"
+  />
+  <Cards.Card
+    icon={<FolderIcon />}
+    title="Custom Settings"
+    href="/docs/getting-started/custom-settings"
+  />
+</Cards>
