--- a/src/content/docs/guides/create-your-own-app-store.mdx
+++ b/src/content/docs/guides/create-your-own-app-store.mdx
@@ -1,5 +1,6 @@
-import { Steps, Callout, FileTree } from "nextra/components";
+import { Steps, Callout, FileTree, Cards } from "nextra/components";
 import { JsonSchemaValidator } from "@/app/components";
+import { CodeBracketIcon, WrenchIcon, InformationCircleIcon } from "@heroicons/react/24/outline";
 
 # Create your own app store
 
@@ -190,10 +191,27 @@ If you encounter issues with your custom app store:
 - Make sure you're using the dynamic compose format correctly
 - Look for errors in the Runtipi logs (located in `runtipi/logs`)
 
-
 ## Sharing your app store
 
 Once you've created your app store, you can share it with others by providing them with your repository URL. They can add it to their Runtipi instance in the same way you did.
 
 Consider documenting your app store with a README.md file in the repository root to help others understand what apps are included and how to use them.
+
+<Cards>
+  <Cards.Card
+    icon={<CodeBracketIcon />}
+    title="Config.json Reference"
+    href="/docs/reference/config-json"
+  />
+  <Cards.Card
+    icon={<WrenchIcon />}
+    title="Dynamic Compose Guide"
+    href="/docs/guides/dynamic-compose-guide"
+  />
+  <Cards.Card
+    icon={<InformationCircleIcon />}
+    title="Apps Available"
+    href="/docs/apps-available"
+  />
+</Cards>
 
