Correct typo in "form_fields"
Corrected a typo in the row label for "form_fields"

--- a/src/content/docs/reference/config-json.mdx
+++ b/src/content/docs/reference/config-json.mdx
@@ -24,7 +24,7 @@ When adding a new app to runtipi, you need to create a `config.json` file in the
 | **no_gui**                  | Set to true for apps with no GUI. Open button will be hidden                                                                                                                                                                      | true                                                                                                                                                                                                                              | no       |
 | **supported_architectures** | If the app is only available for a specific architecture, you can specify it here. If not given, app will be available for all architectures                                                                                      | ["arm64", "amd64"]                                                                                                                                                                                                                | yes      |
 | **uid**, **gid**            | These parameters allow you to give a specific set of permission for the app's data folder. Runtipi will automatically chown the data directory with the provided gid and uid. Both options need to be specified in order to apply | 1000                                                                                                                                                                                                                              | no       |
-| **form_fiels**              | Form fields allow you to promt the user for input during the install, like a username or a password                                                                                                                               | See below                                                                                                                                                                                                                         | yes      |
+| **form_fields**             | Form fields allow you to promt the user for input during the install, like a username or a password                                                                                                                               | See below                                                                                                                                                                                                                         | yes      |
 | **dynamic**                 | Use the new `docker-compose.json` to dynamically generate a compose file. See [Dynamic Compose](https://runtipi.io/docs/reference/dynamic-compose)                                                                                | true                                                                                                                                                                                                                              | no       |
 | **deprecated**              | If the app is deprecated it won't exist in the app store and it will notify users that is no longer maintained.                                                                                                                   | false                                                                                                                                                                                                                             | no       |
 | **min_tipi_version**        | An app may require a newer version of Runtipi than you already have for some extra feature                                                                                                                                        | v3.0.0                                                                                                                                                                                                                            | no       |
