docs: fix dynamic compose page link

--- a/src/content/docs/guides/create-your-own-app-store.mdx
+++ b/src/content/docs/guides/create-your-own-app-store.mdx
@@ -115,7 +115,7 @@ And it's corresponding `config.json`:
 ```
 
 <Callout type="info">
-  See the [config.json options reference](/docs/reference/config-json) and the [Docker Compose](/docs/reference/docker-compose) reference
+  See the [config.json options reference](/docs/reference/config-json) and the [Dynamic Compose](/docs/reference/dynamic-compose) reference
   for a complete list of available options.
 </Callout>
 
